--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@payloadcms/admin-bar": "3.68.4",
+    "@payloadcms/db-postgres": "3.68.4",
     "@payloadcms/live-preview-react": "3.68.4",
     "@payloadcms/next": "3.68.4",
     "@payloadcms/plugin-form-builder": "3.68.4",
@@ -51,9 +52,9 @@
     "react-dom": "19.2.1",
     "react-hook-form": "7.45.4",
     "sharp": "0.34.2",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@payloadcms/db-postgres": "3.68.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
