--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.6",
     "@payloadcms/admin-bar": "3.68.4",
     "@payloadcms/db-postgres": "3.68.4",
     "@payloadcms/live-preview-react": "3.68.4",
@@ -37,12 +40,14 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.378.0",
     "next": "15.4.10",
     "next-sitemap": "^4.2.3",
